# minisat-rs

./: .gitmodules  Cargo.toml  LICENSE  build.rs
bindings/: CMakeLists.txt  binding.cpp
src/: core.rs  lib.rs  simp.rs
