[package]
name = "satif-minisat"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Rust wrapper for the minisat SAT solver"
repository = "https://github.com/gipsyh/minisat-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic-form = { path = "../logic-form", version = "0.2"}
satif = { path = "../satif", version = "0.1"}

[build-dependencies]
cmake = "0.1.50"
